// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ConfirmDialog Confirm Dialog 1`] = `
<div
  aria-hidden="true"
>
  <div />
</div>
`;

exports[`Storyshots ConfirmDialog Confirm Dialog Closed 1`] = `
<div>
  <div />
</div>
`;
